--- a/styles.css
+++ b/styles.css
@@ -74,7 +74,7 @@ body:has(input[value="dim"]:checked) {
 
 /* ===== PROGRESS BAR ===== */
 .progress-container {
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
